--- a/src/pages/Resume.css
+++ b/src/pages/Resume.css
@@ -9,7 +9,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 20vw;
+    padding-left: 1em;
+    text-align: left;
   }
   
   h1 {
@@ -18,39 +19,52 @@
   }
   
   h2 {
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: normal;
     margin: 0 0 1em;
   }
   
   section {
-    margin: 2em 0;
+    margin: 0 0;
+  }
+
+  hr {
+    border: none;
+    border-bottom: 1px solid black; 
+    border-top: 1px solid black;
+    width: 40%;
+    margin: 0 0px;
+    margin-bottom: 10px;
   }
   
   h3 {
     font-size: 1.2em;
-    margin: 0 0 1em;
+    font-weight: bold;
+    margin-bottom: 5px;
   }
   
   h4 {
     font-size: 1em;
     font-weight: bold;
-    margin: 0 0 0.5em;
   }
   
   h5 {
     font-size: 1em;
     font-weight: normal;
-    margin: 0 0 0.5em;
   }
   
   ul {
-    list-style: none;
-    margin: 0;
+    margin-left: 0.2em;
+    margin-top:0;
+    margin-bottom:20px;
+
     padding: 0;
   }
   
   li {
-    margin: 0 0 0.5em;
+    margin: 0 0 0.3em;
   }
   
+  p {
+    margin: 0.3em 0;
+  }
